--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>فروشگاه اینترنتی دیجی بزم آرا</title>
   <link rel="stylesheet" href="./css/main.css" type="text/css" />
-  <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="./swiper/swiper-bundle.min.css" />
   <link rel="icon" href="./icon/alilogo.png">
 
 </head>
