--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="fa" dir="rtl">
 
 <head>
   <meta charset="UTF-8" />
@@ -32,7 +32,7 @@
         <input type="search" name="search" id="search" placeholder="جستجو">
       </div>
       <input type="radio" name="showProfile" id="showProfile">
-      <input type="radio" name="closeProfile" id="closeProfile">
+      <input type="radio" name="showProfile" id="closeProfile">
       <div class="profile">
         <label for="showProfile">
           <img class="prof" src="./icon/profile.svg" alt="">
@@ -47,8 +47,8 @@
             <img src="./icon/close.svg" alt="">
           </label>
         </h6>
-        <p>کیف پول 10000000دلار</p>
-        <p>دیجی کلاب 10000امتیاز</p>
+        <p>کیف پول ۱۲۰۰۰۰دلار</p>
+        <p>دیجی کلاب ۱۰۰۰۰امتیاز</p>
         <p>سفارش ها</p>
         <p>لیست ها</p>
         <p>دیدگاه ها</p>
@@ -345,8 +345,8 @@
         </ul>
       </nav>
       <div class="gps">
-        <input type="radio" name="show" id="show">
-        <input type="radio" name="close" id="close">
+        <input type="radio" name="userAddress" id="show">
+        <input type="radio" name="userAddress" id="close">
         <label for="show">
           <img src="./icon/gps.svg" alt="">
           ارسال به تهران، تهران
@@ -382,7 +382,6 @@
           <div class="swiper-slide"><img src="./images/slider/16.jpg" alt=""></div>
           <div class="swiper-slide"><img src="./images/slider/17.jpg" alt=""></div>
           <div class="swiper-slide"><img src="./images/slider/18.jpg" alt=""></div>
-
         </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
@@ -442,15 +441,105 @@
 
     <!--start surprising-->
     <div class="surprising">
-      <div class="surpImg">
-        <a href="#">
-          <span>
-            <img src="./icon/suprising-digi.svg" alt="">
-          </span>
-          <img src="./images/surprising/101.png" alt="">
-          <!-- <span>مشاهده همه</span> -->
-        </a>
+      <!-- Swiper -->
+      <div class="swiper swiper_surp">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="surpImg">
+              <a href="#">
+                <span>
+                  <img src="./icon/suprising-digi.svg" alt="">
+                </span>
+                <img src="./images/surprising/101.png" alt="">
+                <!-- <span>مشاهده همه</span> -->
+              </a>
+            </div>
+          </div>
+          <div class="swiper-slide">
+
+            <div><a href="#"><img class="imgSurpSwiper" src="./images/surprising/102.jpg" alt="">
+                <div class="priceSwiper" price-off="۱,۰۰۰,۰۰۰" dis-off="۲۰%">۸۰۰,۰۰۰<img class="swiperToman"
+                    src="./icon/toman.svg" alt="">
+                </div>
+              </a>
+            </div>
+
+          </div>
+          <div class="swiper-slide">
+            <div><a href="#">
+                <img class="imgSurpSwiper" src="./images/surprising/103.jpg" alt="">
+                <div class="priceSwiper" price-off="۱,۰۰۰,۰۰۰" dis-off="۲۰%">۸۰۰,۰۰۰<img class="swiperToman"
+                    src="./icon/toman.svg" alt="">
+                </div>
+              </a></div>
+          </div>
+          <div class="swiper-slide">
+            <div><a href="#"><img class="imgSurpSwiper" src="./images/surprising/104.jpg" alt="">
+                <div class="priceSwiper" price-off="۱,۰۰۰,۰۰۰" dis-off="۲۰%">۸۰۰,۰۰۰<img class="swiperToman"
+                    src="./icon/toman.svg" alt="">
+                </div>
+              </a></div>
+          </div>
+          <div class="swiper-slide">
+            <div><a href="#"><img class="imgSurpSwiper" src="./images/surprising/105.jpg" alt="">
+                <div class="priceSwiper" price-off="۱,۰۰۰,۰۰۰" dis-off="۲۰%">۸۰۰,۰۰۰<img class="swiperToman"
+                    src="./icon/toman.svg" alt="">
+                </div>
+              </a></div>
+          </div>
+          <div class="swiper-slide">
+            <div><a href="#"><img class="imgSurpSwiper" src="./images/surprising/106.jpg" alt="">
+                <div class="priceSwiper" price-off="۱,۰۰۰,۰۰۰" dis-off="۲۰%">۸۰۰,۰۰۰<img class="swiperToman"
+                    src="./icon/toman.svg" alt="">
+                </div>
+              </a></div>
+          </div>
+          <div class="swiper-slide">
+            <div><a href=""><img class="imgSurpSwiper" src="./images/surprising/107.jpg" alt="">
+                <div class="priceSwiper" price-off="۱,۰۰۰,۰۰۰" dis-off="۲۰%">۸۰۰,۰۰۰<img class="swiperToman"
+                    src="./icon/toman.svg" alt="">
+                </div>
+              </a></div>
+          </div>
+          <div class="swiper-slide">
+            <div><a href="">
+                <img class="imgSurpSwiper" src="./images/surprising/108.jpg" alt="">
+                <div class="priceSwiper" price-off="۱,۰۰۰,۰۰۰" dis-off="۲۰%">۸۰۰,۰۰۰
+                  <img class="swiperToman" src="./icon/toman.svg" alt="">
+                </div>
+              </a></div>
+          </div>
+          <div class="swiper-slide">
+            <div><a href=""><img class="imgSurpSwiper" src="./images/surprising/109.jpg" alt="">
+                <div class="priceSwiper" price-off="۱,۰۰۰,۰۰۰" dis-off="۲۰%">۸۰۰,۰۰۰<img class="swiperToman"
+                    src="./icon/toman.svg" alt="">
+                </div>
+              </a> </div>
+          </div>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
       </div>
+      <!-- Swiper JS -->
+      <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+      <!-- Initialize Swiper -->
+      <script>
+        var swiper_surp = new Swiper(".swiper_surp", {
+          slidesPerView: 7,
+          spaceBetween: 5,
+          pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+          },
+          navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+          },
+        });
+      </script>
+      <!-- end swiper -->
 
     </div>
     <!--end surprising-->
@@ -469,17 +558,17 @@
         <img src="./icon/marketsurprising.svg" alt="">
       </div>
       <div class="off45">
-        <p>تا 45% تخفیف</p>
+        <p>تا %۵۷ تخفیف</p>
       </div>
       <div class="marketoff">
-        <div class="dis" data-discount="10%"><img src="./images/market/1 (1).jpg" alt=""></div>
-        <div class="dis" data-discount="20%"><img src="./images/market/1 (2).jpg" alt=""></div>
-        <div class="dis" data-discount="30%"><img src="./images/market/1 (3).jpg" alt=""></div>
-        <div class="dis" data-discount="40%"><img src="./images/market/1 (4).jpg" alt=""></div>
-        <div class="dis" data-discount="50%"><img src="./images/market/1 (5).jpg" alt=""></div>
+        <div class="dis" data-discount="۱۰%"><img src="./images/market/1 (1).jpg" alt=""></div>
+        <div class="dis" data-discount="۱۰%"><img src="./images/market/1 (2).jpg" alt=""></div>
+        <div class="dis" data-discount="۱۰%"><img src="./images/market/1 (3).jpg" alt=""></div>
+        <div class="dis" data-discount="۱۰%"><img src="./images/market/1 (4).jpg" alt=""></div>
+        <div class="dis" data-discount="۱۰%"><img src="./images/market/1 (5).jpg" alt=""></div>
       </div>
       <div class="more100">
-        <p>بیش از 100 کالا</p>
+        <p>بیش از ۱۰۰ کالا</p>
       </div>
     </div>
     <!--end market-->
@@ -563,9 +652,48 @@
     <!-- start brand -->
     <div class="brand">
       <div class="brandh3">
-        <h3>محبوبترین برندها</h3>
+        <h3><img src="./icon/brand.svg" alt=""> محبوبترین برندها</h3>
       </div>
-      <div class="brandswiper"></div>
+      <div class="brandSwiper">
+        <!-- Swiper -->
+        <div class="swiper myBrandSwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="./images/brand/101.png" alt=""></div>
+            <div class="swiper-slide"><img src="./images/brand/102.png" alt=""></div>
+            <div class="swiper-slide"><img src="./images/brand/103.png" alt=""></div>
+            <div class="swiper-slide"><img src="./images/brand/104.png" alt=""></div>
+            <div class="swiper-slide"><img src="./images/brand/105.png" alt=""></div>
+            <div class="swiper-slide"><img src="./images/brand/106.png" alt=""></div>
+            <div class="swiper-slide"><img src="./images/brand/109.png" alt=""></div>
+            <div class="swiper-slide"><img src="./images/brand/111.png" alt=""></div>
+            <div class="swiper-slide"><img src="./images/brand/113.png" alt=""></div>
+            <div class="swiper-slide"><img src="./images/brand/112.png" alt=""></div>
+          </div>
+          <div class="swiper-pagination"></div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+        </div>
+
+        <!-- Swiper JS -->
+        <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+        <!-- Initialize Swiper -->
+        <script>
+          var myBrandSwiper = new Swiper(".myBrandSwiper", {
+            slidesPerView: 6,
+            spaceBetween: 0,
+            freeMode: true,
+            pagination: {
+              el: ".swiper-pagination",
+              clickable: true,
+            },
+            navigation: {
+              nextEl: ".swiper-button-next",
+              prevEl: ".swiper-button-prev",
+            },
+          });
+        </script>
+      </div>
     </div>
     <!-- end brand -->
     <!-- start partner bottom -->
@@ -574,7 +702,7 @@
       <div><a href="#"><img src="./images/partner/4.jpg" alt=""></a></div>
     </div>
     <!-- end partner bottom -->
-    <!-- start visitig1 -->
+    <!-- start visiting1 -->
     <div class="visit">
       <div class="p1">
         <div class="p11">
@@ -696,7 +824,7 @@
         </a>
 
         <p>امتیاز شما</p>
-        <b>10000</b>
+        <b>۱۰۰۰</b>
         <img class="clubscore" src="./icon/clubscore.svg" alt="">
       </div>
       <div class="club1"><a dataclub="چرخ و بخت" href="#"><img src="./images/digiclub/13.jpg" alt=""></a></div>
@@ -777,7 +905,117 @@
     </div>
     <!-- end visiting2 -->
     <!-- start bestselling -->
-    <div class="bestsell"></div>
+    <div class="bestsell">
+      <div class="bestTop">
+        <h3><img src="./icon/fire1.svg" alt="">
+          پرفروش‌ترین کالاها</h3>
+        <p><a href="#">مشاهده همه</a></p>
+      </div>
+      <div class="bestBottom">
+        <!-- Swiper -->
+        <div class="swiper swiperBest">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="./images/bestsell/101.jpg" alt="">
+              <h4>۱</h4>
+              <p>کیف </p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/102.jpg" alt="">
+              <h4>۲</h4>
+              <p>قاب</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/103.jpg" alt="">
+              <h4>۳</h4>
+              <p class="noBorder">پتو</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/104.jpg" alt="">
+              <h4>۴</h4>
+              <p>قفل فرمان</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/105.jpg" alt="">
+              <h4>۵</h4>
+              <p>نمیدونم</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/106.jpg" alt="">
+              <h4>۶</h4>
+              <p class="noBorder">هندزفری</p>
+            </div>
+            <div class=" swiper-slide"><img src="./images/bestsell/107.jpg" alt="">
+              <h4>۷</h4>
+              <p>دستمال</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/108.jpg" alt="">
+              <h4>۸</h4>
+              <p>تن ماهی</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/109.jpg" alt="">
+              <h4>۹</h4>
+              <p class="noBorder">یه هندزفری دیگه</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/110.jpg" alt="">
+              <h4>۱۰</h4>
+              <p>سینی</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/111.jpg" alt="">
+              <h4>۱۱</h4>
+              <p>بازم هندزفری</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/112.jpg" alt="">
+              <h4>۱۲</h4>
+              <p class="noBorder">آخرین هندزفری</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/101.jpg" alt="">
+              <h4>۱۳</h4>
+              <p>کیف</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/102.jpg" alt="">
+              <h4>۱۴</h4>
+              <p>قاب</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/103.jpg" alt="">
+              <h4>۱۵</h4>
+              <p class="noBorder">پتو</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/104.jpg" alt="">
+              <h4>۱۶</h4>
+              <p>قفل فرمان</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/105.jpg" alt="">
+              <h4>۱۷</h4>
+              <p>نمیدونم</p>
+            </div>
+            <div class="swiper-slide"><img src="./images/bestsell/106.jpg" alt="">
+              <h4>۱۸</h4>
+              <p class="noBorder">هندزفری</p>
+            </div>
+          </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+        <!-- Swiper JS -->
+        <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+        <!-- Initialize Swiper -->
+        <script>
+          var swiperBest = new Swiper(".swiperBest", {
+            slidesPerView: 4,
+            grid: {
+              rows: 3,
+            },
+            spaceBetween: 8,
+            pagination: {
+              el: ".swiper-pagination",
+              clickable: true,
+            },
+            navigation: {
+              nextEl: ".swiper-button-next",
+              prevEl: ".swiper-button-prev",
+            },
+          });
+        </script>
+      </div>
+    </div>
     <!-- end bestselling -->
     <!-- start partner3 -->
     <div class="partner3">
@@ -884,6 +1122,36 @@
       <a href="#"><img src="./icon/alilogo.png" alt=""></a>
     </div>
     <!-- end design -->
+    <!-- start help -->
+    <div class="help">
+      <input type="radio" name="showHelp" id="showHelp">
+      <input type="radio" name="showHelp" id="closeHelp">
+      <div class="helpCloseDiv"><label for="closeHelp"> <img src="./icon/close1.svg" alt=""></label></div>
+      <div class="helpShowDiv"><label for="showHelp"> <img src="./icon/help.svg" alt=""></label></div>
+      <div class="helper">
+        <div class="help1">
+          <h3>سلام👋👋</h3>
+          <p>
+            جواب سوال‌هاتون رو می‌تونید در زیر پیدا کنید.
+            در غیر اینصورت از ما بپرسید، ما همیشه به سوالاتتون جواب می‌دیم.😊</p>
+        </div>
+        <div class="help2">
+          <p>چگونه میتوانم یک پروفایل ایجاد کنم؟</p>
+        </div>
+        <div class="help2">
+          <p>چطور در دیجی کالا سفارش خود را ثبت کنم ؟</p>
+        </div>
+        <div class="help2">
+          <p>کالایی را که در طرح پیشنهاد شگفت انگیز می باشد می توان با تعداد بیش از یک عدد خریداری کرد؟</p>
+        </div>
+        <div class="help1">
+          <p>جواب سوالتون رو پیدا نکردید؟
+          </p>
+          <p class="help4">گفتگو با پشتیبان آنلاین</p>
+        </div>
+      </div>
+    </div>
+    <!-- end help -->
     <!-- End of project -->
 </body>
 
